[package]
name = "sol_readln"
version = "1.0.1"
edition = "2021"
description = """
A simple alternative to Rust's standard library's method
of reading input from the terminal. (Made for learning and
people coming from higher level languages.)
"""
authors = ["mateusqqfoi"]
rust-version = "1.62.0"
license = "MIT"

[dependencies]
